syntax = "proto3";

package manager;

option go_package = "./v1;v1";

import "validate/validate.proto";

message Role {
  uint32 id = 1;
  uint32 parent_id = 2;
  string name = 3;
  string keyword = 4;
  bool status = 5;
  string description =6;
  string department_ids =7;
  string data_scope = 8;
  uint32 created_at = 9;
  uint32 updated_at = 10;
  repeated Role children = 11;
}

// 获取当前的角色列表返回
message GetRoleTreeReply {
  Role role = 1;
}

// 获取指定的角色
message GetRoleRequest {
  uint32 id = 1[(validate.rules).uint32 = {gt:0}];
}

// 获取指定的角色
message GetRoleReply {
  Role role = 1;
}

message AddRoleRequest{
  uint32 parent_id = 1[(validate.rules).uint32 = {gt:0}];
  string name = 2[(validate.rules).string = {min_len:1}];
  string keyword = 3[(validate.rules).string = {min_len:1}];
  optional bool status = 4;
  string description =5[(validate.rules).string = {min_len:1}];
  string department_ids =6;
  string data_scope = 7[(validate.rules).string = {min_len:1,in:["ALL","CUR", "CUR_DOWN", "DOWN", "CUSTOM"]}];
}

message UpdateRoleRequest{
  uint32 id = 1[(validate.rules).uint32 = {gt:0}];
  uint32 parent_id = 2[(validate.rules).uint32 = {gt:0}];
  string name = 3[(validate.rules).string = {min_len:1}];
  optional bool status = 4;
  string description =5[(validate.rules).string = {min_len:1}];
  string department_ids =6;
  string data_scope = 7[(validate.rules).string = {min_len:1}];
}

message DeleteRoleRequest{
  uint32 id = 1[(validate.rules).uint32 = {gt:0}];
}